# AdvancedWebserver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
include/Configuration/: Configuration.h  ConfigurationType.h  Core.h
include/Core/: Core.h
include/Server/: HandleConnection.h  HandleConnection.hpp  Server.hpp  ServerApp.h
src/: CMakeLists.txt
src/Configuration/: CMakeLists.txt  Configuration.cpp  ConfigurationType.cpp
src/ConfigureTool/: CMakeLists.txt  main.cpp
src/Server/: CMakeLists.txt  HandleConnection.cpp  Server.cpp  ServerApp.cpp  main.cpp
